--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -16,3 +16,5 @@ $sidebar-color-hover: #058f56;
 $sidebar-menu-dropdown-color: #fff;
 
 $editor-size: 100px;
+
+$navbar-assessment-background: #e0e0e0;
