--- a/sass/_cakedebug.scss
+++ b/sass/_cakedebug.scss
@@ -1,6 +1,8 @@
-.cake-debug {
+.app .cake-error:first-child, .app .cake-debug-output:first-child {
+  margin-top: 70px;
+}
+.cake-debug, .cake-error {
     margin-left: $sidebar-width;
-    margin-top: 50px;
     padding: 15px;
     background-color: rgb(250,250,150);
 }
