--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -280,9 +280,11 @@ body.not-logged {
 .not-logged main div.card-login, .not-logged main div.reset-password {
   margin-top: 15px; }
 
-.cake-debug {
+.app .cake-error:first-child, .app .cake-debug-output:first-child {
+  margin-top: 70px; }
+
+.cake-debug, .cake-error {
   margin-left: 250px;
-  margin-top: 50px;
   padding: 15px;
   background-color: #fafa96; }
 
