--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -11,7 +11,7 @@ $navbar-font-size: 0.9rem;
 $sidebar-width: 250px;
 
 $sidebar-background: #0e3747;
-$sidebar-color: #ffa154;
+$sidebar-color: #fff;
 // $sidebar-background: #f3f3f3;
 // $sidebar-color: #4f5f6f;
 
